--- a/src/PluginSpaceport/PluginSpaceport.csproj
+++ b/src/PluginSpaceport/PluginSpaceport.csproj
@@ -27,6 +27,9 @@
     <OutputPath>bin\x86\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net">
+      <HintPath>..\..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="PluginCore">
       <HintPath>..\..\lib\PluginCore.dll</HintPath>
     </Reference>
@@ -38,26 +41,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainUI.cs">
+    <Compile Include="Observable\IObservable.cs" />
+    <Compile Include="Observable\IObserver.cs" />
+    <Compile Include="Observable\Unsubscriber.cs" />
+    <Compile Include="PushWrapper.cs" />
+    <Compile Include="SPDeviceWatcher.cs" />
+    <Compile Include="FileHelper.cs" />
+    <Compile Include="Forms\frmTargets.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmTargets.Designer.cs">
+      <DependentUpon>frmTargets.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MainUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="MainUI.Designer.cs">
+    <Compile Include="Forms\MainUI.Designer.cs">
       <DependentUpon>MainUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Log4NetHelper.cs" />
+    <Compile Include="PluginHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
+    <Compile Include="SpaceportController.cs" />
+    <Compile Include="SpaceportMenu.cs" />
     <Compile Include="SpaceportPlugin.cs" />
-    <EmbeddedResource Include="MainUI.resx">
+    <Compile Include="Forms\frmPatch.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmPatch.Designer.cs">
+      <DependentUpon>frmPatch.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Target.cs" />
+    <Compile Include="TargetEventArgs.cs" />
+    <Compile Include="UpdaterHook.cs" />
+    <EmbeddedResource Include="Forms\frmTargets.resx">
+      <DependentUpon>frmTargets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MainUI.resx">
       <DependentUpon>MainUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmPatch.resx">
+      <DependentUpon>frmPatch.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -69,16 +105,19 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PluginCommon\PluginCommon.csproj">
-      <Project>{E8893B9D-F4C3-4F3A-AE2F-FDB11FC2B6C3}</Project>
-      <Name>PluginCommon</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\spaceportIcon.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\log4net.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InstallerCore\InstallerCore.csproj">
+      <Project>{4fbb9ddc-6e2f-4092-a679-e4b6574e7697}</Project>
+      <Name>InstallerCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
@@ -86,8 +125,7 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>call "$(SolutionDir)tools\CopyPlugins.bat" "$(SolutionDir)tools\"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
