--- a/src/PluginUpdater/PluginUpdater.csproj
+++ b/src/PluginUpdater/PluginUpdater.csproj
@@ -92,7 +92,7 @@
     </ProjectReference>
     <ProjectReference Include="..\PluginSpaceport\PluginSpaceport.csproj">
       <Project>{C93B6254-CDE3-4619-B386-29E1BF5E2BE5}</Project>
-      <Name>SpaceportPlugin</Name>
+      <Name>PluginSpaceport</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
